Rename project from flutter_app_template to medical_records
- Update project name and description in pubspec.yaml
- Update app display names for Android, iOS, and macOS platforms
- Update all documentation files with new project name and medical context
- Modify repository references and examples in README and guides
- Update AI assistant configuration files for new project context

This changes the app branding from a generic Flutter template to a
specialized medical records management application.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_app_template
-description: "A new Flutter project."
+name: medical_records
+description: "Medical records application."
 publish_to: "none"
 
 version: 1.0.0+1
@@ -84,7 +84,7 @@ flutter_launcher_icons:
     generate: true
 
 melos:
-  name: flutter_app_template
+  name: medical_records
   command:
     version:
       # Only allow versioning to happen on main branch.
