Fix treatment save button functionality and add comprehensive CRUD features
- Fix save button functionality in add/edit treatment screens
- Add TreatmentFormBloc for form validation and state management
- Implement TreatmentBloc for CRUD operations
- Add floating action button to treatments list when data exists
- Fix automatic data loading on treatments screen entry
- Add comprehensive treatment and visit management screens
- Implement proper form validation and error handling
- Add treatment detail view with edit/delete capabilities
- Include unit tests for all BLoC functionality
- Update localization strings for treatment management
- Integrate new BLoCs with main provider configuration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ workspace:
   - app_bloc/theme
   - app_bloc/hospital
   - app_bloc/hospital_form_bloc
+  - app_bloc/treatment
+  - app_bloc/treatment_form_bloc
+  - app_bloc/visit
   - app_widget/adaptive
   - app_widget/artwork
   - app_widget/feedback
@@ -56,6 +59,9 @@ dependencies:
   theme_bloc: any
   hospital_bloc: any
   hospital_form_bloc: any
+  treatment_bloc: any
+  treatment_form_bloc: any
+  visit_bloc: any
   hospital_form: any
   app_artwork: any
   app_feedback: any
