Fix visit form dropdown errors and data synchronization issues
- Resolve dropdown assertion errors in Add/Edit Visit forms by implementing SafeDropdownFieldBlocBuilder
- Fix data synchronization between VisitFormBloc and VisitBloc to ensure UI updates after visit edits
- Add VisitBloc parameter to VisitFormBloc constructor for proper state management
- Implement smart field dependency setup to prevent initialization conflicts
- Add comprehensive test coverage for visit form functionality and BLoC synchronization
- Enhance visit details screen with robust data loading and fallback strategies
- Maintain filter context in VisitBloc for consistent user experience across screens

Files modified:
- app_bloc/visit_form_bloc/: Complete refactor to use flutter_form_bloc pattern
- app_bloc/visit/: Add filter state tracking and smart reloading
- lib/screens/visits/: Update screens to pass VisitBloc and handle synchronization
- app_widget/visit_form/: Add safe dropdown builder and form enhancements
- test/: Add comprehensive test suite for visit functionality

--- a/app_bloc/visit_form_bloc/pubspec.yaml
+++ b/app_bloc/visit_form_bloc/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
   bloc: ^9.0.0
   equatable: ^2.0.5
+  form_bloc:
+    path: ../../third_party/form_bloc
   app_database:
     path: ../../app_lib/database
 
