fix: Complete BLoC package dependency resolution and cleanup
- Add missing app_database and drift dependencies to BLoC packages
- Remove unnecessary library declarations across BLoC packages
- Clean up unused imports in visit package files
- Update pubspec.yaml files with proper workspace dependencies
- Fix import statements to use package imports instead of relative paths
- Resolve analysis issues in core BLoC packages

--- a/app_bloc/treatment/pubspec.yaml
+++ b/app_bloc/treatment/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   bloc: ^9.0.0
   equatable: ^2.0.7
+  app_database: any
+  drift: ^2.26.2
 
 dev_dependencies:
   flutter_test:
